# khlus-trading-hub

./: .env.example  .gitignore  CLAUDE.md  GOREV-TAKIP.md  GUVENLIK-TAKIP.md  package-lock.json  package.json  render.yaml
apps/api/: .env.example  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: index.ts
apps/api/src/config/: env.ts
apps/api/src/db/: check-users.ts  prisma.ts  reset-password.ts  seed.ts
apps/api/src/lib/: sanitize.ts
apps/api/src/middleware/: auth.ts  csrf.ts
apps/api/src/routes/: auth.ts  channels.ts  dm.ts  events.ts  livekit.ts  members.ts  messages.ts  reactions.ts  roles.ts  search.ts  servers.ts  uploads.ts
apps/api/src/socket/: index.ts
apps/api/src/utils/: permissions.ts
apps/desktop/: electron-builder.yml  package.json  tsconfig.json
apps/desktop/src/: main.ts  preload.ts  tray.ts  updater.ts  window-state.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/servers/: layout.tsx  page.tsx
apps/web/src/components/chat/: ChatArea.tsx  DMChatArea.tsx  DMPanel.tsx  DMSidebar.tsx
apps/web/src/components/layout/: ChannelSidebar.tsx  (+6 more)
apps/web/src/lib/: api.ts  notification.ts  socket.ts
apps/web/src/stores/: auth.ts  dm.ts  server.ts  theme.ts  unread.ts  voice.ts
apps/web/src/types/: electron.d.ts
(+8 files in other folders)
