[package]
name = "khlus-trading-hub"
version = "0.1.0"
description = "Khlus Trading Hub - Masaustu Uygulamasi"
authors = ["Khlus"]
edition = "2021"

[lib]
name = "khlus_trading_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
